newly PEP-8 formatted Python sections

--- a/notebooks/bank_churn_classification.ipynb
+++ b/notebooks/bank_churn_classification.ipynb
@@ -30,10 +30,10 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "# Import necessary deep learning modules \n",
+    "# Import necessary deep learning modules\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import InputLayer, Dense, BatchNormalization, Dropout\n",
-    "from tensorflow.keras.models import Sequential \n",
+    "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.optimizers import SGD\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
@@ -43,12 +43,12 @@
     "# Import modules for plotting\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.axes._axes import Axes \n",
+    "from matplotlib.axes._axes import Axes\n",
     "\n",
     "# Set TensorFlow and numpy seeds\n",
     "seed_value = 42\n",
     "tf.random.set_seed(seed_value)\n",
-    "np.random.seed(seed_value)\n"
+    "np.random.seed(seed_value)"
    ]
   },
   {
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bank_churn_df = pd.read_csv(r'C:\\Users\\evans\\PycharmProjects\\bank_churn_nn_classification\\data\\Churn_Modelling.csv')"
+    "bank_churn_df = pd.read_csv(\n",
+    "    r\"C:\\Users\\evans\\PycharmProjects\\bank_churn_nn_classification\\data\\Churn_Modelling.csv\"\n",
+    ")"
    ]
   },
   {
@@ -264,10 +266,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_continuous_variable_distributions(data: pd.DataFrame, columns: List[str]) -> Axes:\n",
+    "def plot_continuous_variable_distributions(\n",
+    "    data: pd.DataFrame, columns: List[str]\n",
+    ") -> Axes:\n",
     "    # Set the number of rows and columns for subplots\n",
     "    num_plots = len(columns)\n",
-    "    num_rows = num_plots // 3 + (num_plots % 3 > 0)  # Adjust the number of rows as needed\n",
+    "    num_rows = num_plots // 3 + (\n",
+    "        num_plots % 3 > 0\n",
+    "    )  # Adjust the number of rows as needed\n",
     "    num_cols = min(num_plots, 3)\n",
     "\n",
     "    # Create subplots\n",
@@ -281,10 +287,10 @@
     "            ax = axes[i % num_cols]\n",
     "\n",
     "        # Plot the distribution\n",
-    "        data[col].plot(kind='hist', ax=ax, bins=20, edgecolor='k')\n",
-    "        ax.set_title(f'Distribution of {col}')\n",
+    "        data[col].plot(kind=\"hist\", ax=ax, bins=20, edgecolor=\"k\")\n",
+    "        ax.set_title(f\"Distribution of {col}\")\n",
     "        ax.set_xlabel(col)\n",
-    "        ax.set_ylabel('Frequency')\n",
+    "        ax.set_ylabel(\"Frequency\")\n",
     "\n",
     "    # Remove any empty subplots\n",
     "    for i in range(len(columns), num_rows * num_cols):\n",
@@ -314,7 +320,14 @@
    ],
    "source": [
     "# Define continuous columns and plot distributions\n",
-    "cont_cols = ['CreditScore', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'EstimatedSalary']\n",
+    "cont_cols = [\n",
+    "    \"CreditScore\",\n",
+    "    \"Age\",\n",
+    "    \"Tenure\",\n",
+    "    \"Balance\",\n",
+    "    \"NumOfProducts\",\n",
+    "    \"EstimatedSalary\",\n",
+    "]\n",
     "plot_continuous_variable_distributions(bank_churn_df, cont_cols)"
    ]
   },
@@ -347,8 +360,8 @@
     "\n",
     "# Create a heatmap\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", square=True)\n",
-    "plt.title('Correlation Heatmap')\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\", square=True)\n",
+    "plt.title(\"Correlation Heatmap\")\n",
     "plt.show()"
    ]
   },
@@ -377,17 +390,17 @@
    ],
    "source": [
     "# Define categorical columns\n",
-    "cat_cols = ['Geography', 'Gender', 'HasCrCard', 'IsActiveMember']\n",
+    "cat_cols = [\"Geography\", \"Gender\", \"HasCrCard\", \"IsActiveMember\"]\n",
     "\n",
     "# Create bar plots\n",
     "plt.figure(figsize=(12, 6))\n",
     "for i, feature in enumerate(cat_cols, start=1):\n",
     "    plt.subplot(2, 2, i)\n",
-    "    sns.countplot(data=bank_churn_df, x=feature, hue='Exited', palette='Set1')\n",
-    "    plt.title(f'Relationship Between {feature} and Exit Status')\n",
+    "    sns.countplot(data=bank_churn_df, x=feature, hue=\"Exited\", palette=\"Set1\")\n",
+    "    plt.title(f\"Relationship Between {feature} and Exit Status\")\n",
     "    plt.xlabel(feature)\n",
-    "    plt.ylabel('Count')\n",
-    "    plt.legend(title='Exit Status', labels=['Did Not Exit', 'Exited'])\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.legend(title=\"Exit Status\", labels=[\"Did Not Exit\", \"Exited\"])\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -472,15 +485,15 @@
    ],
    "source": [
     "# Count the occurences of exiting vs. non-exiting customers\n",
-    "category_counts = bank_churn_df['Exited'].value_counts()\n",
+    "category_counts = bank_churn_df[\"Exited\"].value_counts()\n",
     "\n",
     "# Create a bar plot\n",
-    "category_counts.plot(kind = 'bar')\n",
+    "category_counts.plot(kind=\"bar\")\n",
     "\n",
-    "# Add labels and title \n",
-    "plt.xlabel('Categories (1 = Exit, 0 = Non-Exit)')\n",
-    "plt.ylabel('Counts')\n",
-    "plt.title('Exit vs. Non-Exit Value Counts')"
+    "# Add labels and title\n",
+    "plt.xlabel(\"Categories (1 = Exit, 0 = Non-Exit)\")\n",
+    "plt.ylabel(\"Counts\")\n",
+    "plt.title(\"Exit vs. Non-Exit Value Counts\")"
    ]
   },
   {
@@ -532,24 +545,29 @@
    ],
    "source": [
     "# Shuffle the DataFrame\n",
-    "shuffled_df = bank_churn_df.sample(frac = 1, random_state = 42)\n",
+    "shuffled_df = bank_churn_df.sample(frac=1, random_state=42)\n",
     "\n",
     "# Oversample the minority class (Exit)\n",
     "majority_class_size = category_counts.max()\n",
-    "oversampled_df = pd.concat([\n",
-    "    shuffled_df[shuffled_df['Exited'] == 0],\n",
-    "    shuffled_df[shuffled_df['Exited'] == 1].sample(majority_class_size, replace = True)\n",
-    "], axis = 0)\n",
+    "oversampled_df = pd.concat(\n",
+    "    [\n",
+    "        shuffled_df[shuffled_df[\"Exited\"] == 0],\n",
+    "        shuffled_df[shuffled_df[\"Exited\"] == 1].sample(\n",
+    "            majority_class_size, replace=True\n",
+    "        ),\n",
+    "    ],\n",
+    "    axis=0,\n",
+    ")\n",
     "\n",
     "# Display the oversampled barplot\n",
     "# Create a bar plot\n",
-    "os_category_counts = oversampled_df['Exited'].value_counts()\n",
-    "os_category_counts.plot(kind = 'bar')\n",
+    "os_category_counts = oversampled_df[\"Exited\"].value_counts()\n",
+    "os_category_counts.plot(kind=\"bar\")\n",
     "\n",
-    "# Add labels and title \n",
-    "plt.xlabel('Categories (1 = Exit, 0 = Non-Exit)')\n",
-    "plt.ylabel('Counts')\n",
-    "plt.title('Oversampled Exit vs. Non-Exit Value Counts')"
+    "# Add labels and title\n",
+    "plt.xlabel(\"Categories (1 = Exit, 0 = Non-Exit)\")\n",
+    "plt.ylabel(\"Counts\")\n",
+    "plt.title(\"Oversampled Exit vs. Non-Exit Value Counts\")"
    ]
   },
   {
@@ -737,7 +755,7 @@
    "outputs": [],
    "source": [
     "# Removing unnecessary columns\n",
-    "oversampled_df.drop(labels = ['RowNumber', 'CustomerId', 'Surname'], axis =1, inplace=True)"
+    "oversampled_df.drop(labels=[\"RowNumber\", \"CustomerId\", \"Surname\"], axis=1, inplace=True)"
    ]
   },
   {
@@ -886,8 +904,8 @@
    "outputs": [],
    "source": [
     "# Convert integer-encoded target class labels into a tensor for binary classification\n",
-    "y = oversampled_df['Exited'].values\n",
-    "oversampled_df.drop(labels = 'Exited', axis = 1, inplace = True)"
+    "y = oversampled_df[\"Exited\"].values\n",
+    "oversampled_df.drop(labels=\"Exited\", axis=1, inplace=True)"
    ]
   },
   {
@@ -897,17 +915,24 @@
    "outputs": [],
    "source": [
     "# Use StandardScaler to preprocess continuous variables to be centered around zero\n",
-    "cts_cols = ['CreditScore', 'Age', 'NumOfProducts', 'Tenure', 'Balance', 'EstimatedSalary']\n",
+    "cts_cols = [\n",
+    "    \"CreditScore\",\n",
+    "    \"Age\",\n",
+    "    \"NumOfProducts\",\n",
+    "    \"Tenure\",\n",
+    "    \"Balance\",\n",
+    "    \"EstimatedSalary\",\n",
+    "]\n",
     "scaler = StandardScaler()\n",
     "oversampled_df[cts_cols] = scaler.fit_transform(oversampled_df[cts_cols])\n",
     "\n",
-    "# Convert categorial variables for input features using one-hot encoding \n",
-    "encoded_df = pd.get_dummies(oversampled_df, columns = ['Geography', 'Gender'])\n",
-    "bool_cols = encoded_df.columns[11:] \n",
+    "# Convert categorial variables for input features using one-hot encoding\n",
+    "encoded_df = pd.get_dummies(oversampled_df, columns=[\"Geography\", \"Gender\"])\n",
+    "bool_cols = encoded_df.columns[11:]\n",
     "\n",
     "# Converting categorical columns to binary labels\n",
-    "encoded_df[bool_cols] = encoded_df[bool_cols].astype(np.int64) \n",
-    "   \n",
+    "encoded_df[bool_cols] = encoded_df[bool_cols].astype(np.int64)\n",
+    "\n",
     "# Covnert the DataFrame of predictors into numerical array with dimensions (samples, features)\n",
     "X = encoded_df.values"
    ]
@@ -930,7 +955,14 @@
    ],
    "source": [
     "# Define continuous scaled columns and plot distributions\n",
-    "cont_cols_scaled = ['CreditScore', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'EstimatedSalary']\n",
+    "cont_cols_scaled = [\n",
+    "    \"CreditScore\",\n",
+    "    \"Age\",\n",
+    "    \"Tenure\",\n",
+    "    \"Balance\",\n",
+    "    \"NumOfProducts\",\n",
+    "    \"EstimatedSalary\",\n",
+    "]\n",
     "plot_continuous_variable_distributions(oversampled_df, cont_cols_scaled)"
    ]
   },
@@ -973,10 +1005,12 @@
    ],
    "source": [
     "# Class labels and their order\n",
-    "target_names = ['Non-Exit', 'Exit']\n",
+    "target_names = [\"Non-Exit\", \"Exit\"]\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=seed_value)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=seed_value\n",
+    ")\n",
     "\n",
     "# Create and train a logistic regression model\n",
     "logistic_regression = LogisticRegression(random_state=seed_value)\n",
@@ -985,7 +1019,7 @@
     "# Make predictions on the test set\n",
     "y_pred = logistic_regression.predict(X_test)\n",
     "\n",
-    "# Evaluate the model's performance \n",
+    "# Evaluate the model's performance\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Accuracy: {accuracy:.2f}\")\n",
     "\n",
@@ -1023,7 +1057,7 @@
    "source": [
     "# Convert X and y arrays to tensors\n",
     "predictors = tf.convert_to_tensor(X, dtype=tf.int64)\n",
-    "target = tf.convert_to_tensor(y) "
+    "target = tf.convert_to_tensor(y)"
    ]
   },
   {
@@ -1055,11 +1089,7 @@
     }
    ],
    "source": [
-    "node_options = list(range(\n",
-    "    min_nodes_per_layer,\n",
-    "    max_nodes_per_layer + 1,\n",
-    "    node_step_size\n",
-    "))\n",
+    "node_options = list(range(min_nodes_per_layer, max_nodes_per_layer + 1, node_step_size))\n",
     "node_options"
    ]
   },
@@ -1288,13 +1318,13 @@
     "for permutation in layer_node_permutations:\n",
     "    model = Sequential()\n",
     "    model.add((InputLayer(input_shape=input_shape)))\n",
-    "    model_name = ''\n",
+    "    model_name = \"\"\n",
     "\n",
     "    for nodes_at_layers in permutation:\n",
-    "        model.add(Dense(nodes_at_layers, activation = 'relu'))\n",
-    "        model_name += f'dense{nodes_at_layers}_'\n",
-    "    \n",
-    "    model.add(Dense(1, activation = 'sigmoid'))\n",
+    "        model.add(Dense(nodes_at_layers, activation=\"relu\"))\n",
+    "        model_name += f\"dense{nodes_at_layers}_\"\n",
+    "\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
     "    model._name = model_name[:-1]\n",
     "\n",
     "    models.append(model)"
@@ -1353,14 +1383,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_models(num_layers: int,\n",
-    "               min_nodes_per_layer: int,\n",
-    "               max_nodes_per_layer: int,\n",
-    "               node_step_size: int,\n",
-    "               input_shape: tuple,\n",
-    "               hidden_layer_activation: str = 'relu',\n",
-    "               num_nodes_at_output: int = 1,\n",
-    "               output_layer_activation: str = 'sigmoid') -> list:\n",
+    "def get_models(\n",
+    "    num_layers: int,\n",
+    "    min_nodes_per_layer: int,\n",
+    "    max_nodes_per_layer: int,\n",
+    "    node_step_size: int,\n",
+    "    input_shape: tuple,\n",
+    "    hidden_layer_activation: str = \"relu\",\n",
+    "    num_nodes_at_output: int = 1,\n",
+    "    output_layer_activation: str = \"sigmoid\",\n",
+    ") -> list:\n",
     "    \"\"\"\n",
     "    Generate a list of Keras Sequential models.\n",
     "\n",
@@ -1377,8 +1409,10 @@
     "    Returns:\n",
     "        list: List of Keras Sequential models.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    node_options = list(range(min_nodes_per_layer, max_nodes_per_layer + 1, node_step_size))\n",
+    "\n",
+    "    node_options = list(\n",
+    "        range(min_nodes_per_layer, max_nodes_per_layer + 1, node_step_size)\n",
+    "    )\n",
     "    layer_possibilities = [node_options] * num_layers\n",
     "    layer_node_permutations = list(itertools.product(*layer_possibilities))\n",
     "\n",
@@ -1386,13 +1420,13 @@
     "    for permutation in layer_node_permutations:\n",
     "        model = Sequential()\n",
     "        model.add(InputLayer(input_shape=input_shape))\n",
-    "        model_name = ''\n",
+    "        model_name = \"\"\n",
     "\n",
     "        for nodes_at_layer in permutation:\n",
-    "            model.add(Dense(nodes_at_layer, activation = hidden_layer_activation))\n",
-    "            model_name += f'dense{nodes_at_layer}_'\n",
+    "            model.add(Dense(nodes_at_layer, activation=hidden_layer_activation))\n",
+    "            model_name += f\"dense{nodes_at_layer}_\"\n",
     "\n",
-    "        model.add(Dense(num_nodes_at_output, activation = output_layer_activation))\n",
+    "        model.add(Dense(num_nodes_at_output, activation=output_layer_activation))\n",
     "        model._name = model_name[:-1]\n",
     "        models.append(model)\n",
     "\n",
@@ -1421,7 +1455,7 @@
     "    min_nodes_per_layer=64,\n",
     "    max_nodes_per_layer=256,\n",
     "    node_step_size=64,\n",
-    "    input_shape=input_shape\n",
+    "    input_shape=input_shape,\n",
     ")\n",
     "\n",
     "all_models_3_layers = get_models(\n",
@@ -1429,7 +1463,7 @@
     "    min_nodes_per_layer=64,\n",
     "    max_nodes_per_layer=256,\n",
     "    node_step_size=64,\n",
-    "    input_shape=input_shape\n",
+    "    input_shape=input_shape,\n",
     ")\n",
     "\n",
     "all_models_4_layers = get_models(\n",
@@ -1437,7 +1471,7 @@
     "    min_nodes_per_layer=64,\n",
     "    max_nodes_per_layer=256,\n",
     "    node_step_size=64,\n",
-    "    input_shape=input_shape\n",
+    "    input_shape=input_shape,\n",
     ")"
    ]
   },
@@ -1454,11 +1488,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimize(models: list,\n",
-    "             predictors: tf.Tensor,\n",
-    "             target: np.array,\n",
-    "             epochs: int = 30,\n",
-    "             verbose: bool = False) -> pd.DataFrame:\n",
+    "def optimize(\n",
+    "    models: list,\n",
+    "    predictors: tf.Tensor,\n",
+    "    target: np.array,\n",
+    "    epochs: int = 30,\n",
+    "    verbose: bool = False,\n",
+    ") -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Train and evaluate Keras models using provided data.\n",
     "\n",
@@ -1473,7 +1509,7 @@
     "    Returns:\n",
     "        pd.DataFrame: Model validation accuracies.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    results = []\n",
     "\n",
     "    def train(model: tf.keras.Sequential) -> dict:\n",
@@ -1490,29 +1526,35 @@
     "        early_stopping_monitor = EarlyStopping(patience=3)\n",
     "\n",
     "        model.compile(\n",
-    "            loss = 'binary_crossentropy',\n",
-    "            optimizer = 'adam',\n",
-    "            metrics = ['accuracy', recall_m, precision_m, f1_score]\n",
+    "            loss=\"binary_crossentropy\",\n",
+    "            optimizer=\"adam\",\n",
+    "            metrics=[\"accuracy\", recall_m, precision_m, f1_score],\n",
     "        )\n",
     "\n",
-    "        model_training = model.fit(predictors, target, epochs=epochs, validation_split = 0.2, callbacks = [early_stopping_monitor], verbose = verbose)\n",
-    "        \n",
+    "        model_training = model.fit(\n",
+    "            predictors,\n",
+    "            target,\n",
+    "            epochs=epochs,\n",
+    "            validation_split=0.2,\n",
+    "            callbacks=[early_stopping_monitor],\n",
+    "            verbose=verbose,\n",
+    "        )\n",
+    "\n",
     "        return {\n",
-    "            'model_name': model.name,\n",
-    "            'validation_accuracy': model_training.history['val_accuracy'][-1],\n",
-    "            'validation_precision': model_training.history['val_precision_m'][-1],\n",
-    "            'validation_recall': model_training.history['val_recall_m'][-1],\n",
-    "            'validation_f1': model_training.history['val_f1_score'][-1]\n",
+    "            \"model_name\": model.name,\n",
+    "            \"validation_accuracy\": model_training.history[\"val_accuracy\"][-1],\n",
+    "            \"validation_precision\": model_training.history[\"val_precision_m\"][-1],\n",
+    "            \"validation_recall\": model_training.history[\"val_recall_m\"][-1],\n",
+    "            \"validation_f1\": model_training.history[\"val_f1_score\"][-1],\n",
     "        }\n",
-    "    \n",
-    "        \n",
+    "\n",
     "    for model in models:\n",
     "        try:\n",
-    "            print(model.name, end=' ... ')\n",
+    "            print(model.name, end=\" ... \")\n",
     "            res = train(model=model)\n",
     "            results.append(res)\n",
     "        except Exception as e:\n",
-    "            print(f'{model.name} --> {str(e)}')\n",
+    "            print(f\"{model.name} --> {str(e)}\")\n",
     "\n",
     "    return pd.DataFrame(results)"
    ]
@@ -1699,7 +1741,9 @@
     }
    ],
    "source": [
-    "optimization_results_2_layers.sort_values(by='validation_accuracy', ascending=False).head()"
+    "optimization_results_2_layers.sort_values(\n",
+    "    by=\"validation_accuracy\", ascending=False\n",
+    ").head()"
    ]
   },
   {
@@ -1802,7 +1846,9 @@
     }
    ],
    "source": [
-    "optimization_results_3_layers.sort_values(by='validation_accuracy', ascending=False).head()"
+    "optimization_results_3_layers.sort_values(\n",
+    "    by=\"validation_accuracy\", ascending=False\n",
+    ").head()"
    ]
   },
   {
@@ -1905,7 +1951,9 @@
     }
    ],
    "source": [
-    "optimization_results_4_layers.sort_values(by='validation_accuracy', ascending=False).head()"
+    "optimization_results_4_layers.sort_values(\n",
+    "    by=\"validation_accuracy\", ascending=False\n",
+    ").head()"
    ]
   },
   {
